--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -16,7 +16,8 @@
     <meta property="og:description" content="{{ site.description }}" />
     {% endif %}
 
-    <meta name="author" content="{{ site.name }}" />
+    <meta name="author" content="Pragya Mishra" />
+    <meta name="description" content="Here I take a little space and a bit of your time to share a few personal anecdotes you might relate to or find amusing. I also keep recording summaries or takeaways from a few of the qexcellent books I read." />
 
     {% if page.title %}
     <meta property="og:title" content="{{ page.title }}" />
