changing disclaimer content

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,4 +9,9 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
+
+  <div class="disclaimer">
+    Disclaimer: The opinions expressed on this site are solely mine.
+  </div>
+  
 </article>
