--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,5 +13,9 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
+  <div class="disclaimer">
+    Disclaimer: The opinions expressed on this site are solely mine.
+  </div>
+  
   {% include disqus.html %}
 </article>
