--- a/style.scss
+++ b/style.scss
@@ -120,6 +120,11 @@ img {
   color: $gray;
 }
 
+.disclaimer {
+  font-style: italic;
+  color: $gray;
+}
+
 // Specify the color of the selection
 ::-moz-selection {
   color: $black;
