--- a/style.scss
+++ b/style.scss
@@ -199,7 +199,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
+  font-family: "Akaya Telivigala";
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -218,7 +218,7 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
+  font-family: "Akaya Telivigala";
   font-size: 18px;
 
   @include mobile {
