--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 
 @import "reset";
 @import "variables";
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -31,7 +32,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Akaya Telivigala";
+  font-family: 'Shadows Into Light', cursive;
   color: $darkerGray;
   font-weight: bold;
 
@@ -199,7 +200,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: "Akaya Telivigala";
+  font-family: 'Shadows Into Light', cursive;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -218,7 +219,7 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: "Akaya Telivigala";
+  font-family: 'Shadows Into Light', cursive;
   font-size: 18px;
 
   @include mobile {
