--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,7 @@
 @import "reset";
 @import "variables";
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -21,8 +21,9 @@ html {
 
 body {
 	background: $white;
-  font: 18px/1.4 'Architects Daughter', cursive;
-  color: $darkGray;
+  font-size: 18px/1.4 ;
+  font-family: 'Montserrat', sans-serif;
+  color: $pink;
 }
 
 .container {
@@ -34,7 +35,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Shadows Into Light', cursive;
-  color: $darkerGray;
+  color: $green;
   font-weight: bold;
 
   line-height: 1.7;
@@ -199,7 +200,7 @@ img {
 
 .site-name {
   margin: 0;
-  color: $darkGray;
+  color: $pink;
   cursor: pointer;
   font-family: 'Shadows Into Light', cursive;
   font-weight: 300;
