--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,8 +13,7 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
-$pink: #FF00FF;
-$green: #080;
+$pink: #006699;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
