--- a/style.scss
+++ b/style.scss
@@ -21,9 +21,8 @@ html {
 
 body {
 	background: $white;
-  font-size: 18px/1.4 ;
-  font-family: 'Montserrat', sans-serif;
-  color: $pink;
+  font: 18px/1.4 $helvetica;
+  color: $darkGray;
 }
 
 .container {
@@ -34,8 +33,8 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Shadows Into Light', cursive;
-  color: $green;
+  font-family: $helveticaNeue;
+  color: $darkerGray;
   font-weight: bold;
 
   line-height: 1.7;
@@ -200,9 +199,9 @@ img {
 
 .site-name {
   margin: 0;
-  color: $pink;
+  color: $darkGray;
   cursor: pointer;
-  font-family: 'Shadows Into Light', cursive;
+  font-family: $helveticaNeue;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -221,7 +220,7 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: 'Shadows Into Light', cursive;
+  font-family: $helveticaNeue;
   font-size: 18px;
 
   @include mobile {
