--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-	background: $white;
+	background: $pinkish;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -35,7 +35,6 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
-  font-weight: bold;
 
   line-height: 1.7;
   margin: 1em 0 15px;
