--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,7 +13,7 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
-$pinkish: #ffe6e6;
+$pinkish: #fffefd;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
